# Urban_Amenities2

./: .coverage  .coveragerc  .gitignore  AGENTS.md  CONTRIBUTING.md  CONTRIBUTING.md.rej  NEXT_STEPS.md  README.md  changes1.patch  changes2.patch  changes3.patch  changes4.patch  codex10.patch  codex11.patch  codex12.patch  codex13.patch  codex15.patch  codex17.patch  codex18.patch  codex19.patch  codex5.patch  codex6.patch  codex8.patch  codex9.patch  coverage.json  coverage.xml  docker-compose.ui.yml  pyproject.toml  requirements-ui.txt  requirements.txt
.github/workflows/: ci.yml  ci.yml.rej
.hypothesis/constants/: 0074fe3d26d58f3c  00bf217405205fd1  036b729a6c053aa9  0559c5b0e636547e  071d5e4551475bcb  077d1b1b61665afd  0a49983fe358498e  1041e9c59a5b85ff  11eeb7c2a7dc8f6a  153fc831f6c01555  17ec99f10a988ec7  188d2966cff841ba  1904785b8198e205  1d3a9c8708b96faa  20c3c77701599d35  268c721054dcc78d  272850dedd813d5f  272db46850b9a9fc  27c3d32c7c96c58e  29c9f6d14f8c022c  2dc95ee3382e00ba  2f76dad541c6a6c9  2fe55235778a85c3  31e5b6e53a05f815  33abb76ebd5e9bfb  3954bf4ea97426f0  3ad7175d5b46ee37  42d84404a8718e28  459aca598a64e67a  4619c1a98d6cd25c  46328faf91df4d89  4b57aacb85c6d289  4d0838b116b8c04a  5273f386adc909e4  53054845ac4a0963  58bc680a9943fe8f  5b63bad35a41f014  5bf85ef78873ef44  5c39294a7f6e84fb  5c7b68a1ff893e63  (+71 more)
.hypothesis/examples/04e6b3400353b141/: 292bbbb066cede31  4870ad53070010b0  74e37108607a7bb7  78fd233a8734c4b1  af2d7b731f0f6be2  f46b66d507961f6f  fa475b0587d0892f
.hypothesis/examples/292bbbb066cede31/: 29127ce7c379872d
.hypothesis/examples/4870ad53070010b0/: 46984445ff15f4de  49e1f36c030fa0d3  4fffd5e973eb1fca  52a6f8acfa93a9c4  559bf16f26778d2a  6bac9e27cdafc67c  7f809dc98c413551  8fea5201174bf4bb  93677d5947fcad06  9d2419d102eb5147  a51ad184088f2bae  c7574bed557285bb  e9e8c4305cb8e806
.hypothesis/examples/74e37108607a7bb7/: c3b17b64d40a3796
.hypothesis/examples/78fd233a8734c4b1/: a638666a05ba3b80
.hypothesis/examples/af2d7b731f0f6be2/: 77a436f8f5bb5826  bf3eaa03a89e7e7e
.hypothesis/examples/f46b66d507961f6f/: e518cad7d275110a
.hypothesis/examples/fa475b0587d0892f/: 0fee97312c18b59e  437f35aae1d03b93  547fda4ece193840  78d28326a7d6e35f  87adbe7dee8a66a3  9334d1aadfb26051  a5509363b5628e24  bcd86ed476d9b872  dd4ab20cb680c04d  f89502115f47ee9f
.hypothesis/patches/: 2025-10-03--4e4b5277.patch  2025-10-03--5d047a49.patch  2025-10-03--8fe8f967.patch
cache/api/wikipedia/: cache.db
configs/: params_default.yml
configs/nginx/: ui.conf
data/: snapshots.jsonl
data/cache/skims/: cache.db
deployment/: Dockerfile.ui  docker-compose.yml  nginx.conf
docs/: AUCS place category crosswalk  DEPLOYMENT_GUIDE.md  Production Readiness Runbook.md  ROUTING_TYPING.md  UI_DEVELOPMENT.md  UI_USER_GUIDE.md  Urban Amenities API to parameter mapping.md  Urban Amenities Model Overview.md  Urban_Amenities_Model_Spec.sty  architecture.md  architecture_review.md  categories.md  configuration.md  data_pipeline.md  data_sources.md  routing.md  testing.md
docs/subscores/: essentials_access.md
examples/: compute_ea.ipynb  ingest_co_data.py
io/gtfs/: realtime.py
openspec/: CHANGES_SUMMARY.md  FINAL_STATUS_REPORT.md  IMPLEMENTATION_GUIDE.md  INTERACTIVE_UI_PROPOSAL_SUMMARY.md  OPENSPEC_README.md  PRODUCTION_READINESS_CHECKLIST.md  PRODUCTION_READINESS_SUMMARY.md  STUB_AUDIT_REPORT.md  project.md
openspec/changes/: COVERAGE_PROPOSALS_SUMMARY.md  TYPE_SAFETY_PROPOSALS_SUMMARY.md  TYPE_SAFETY_QUICK_START.md
openspec/changes/add-amenity-quality/: proposal.md  tasks.md
openspec/changes/add-category-aggregation/: proposal.md  tasks.md
openspec/changes/add-cli-config-test-coverage/: proposal.md  tasks.md
openspec/changes/add-core-infrastructure/: proposal.md  tasks.md
openspec/changes/add-corridor-enrichment/: proposal.md  tasks.md
openspec/changes/add-data-ingestion/: proposal.md  tasks.md
openspec/changes/add-essentials-access/: proposal.md  tasks.md
openspec/changes/add-hub-airport-access/: proposal.md  tasks.md
openspec/changes/add-interactive-visualization-ui/: proposal.md  tasks.md
openspec/changes/add-io-module-test-coverage/: proposal.md  tasks.md
openspec/changes/add-leisure-culture-access/: proposal.md  tasks.md
scripts/: check_coverage.py  generate_ui_sample_data.py  ui_performance_benchmark.py
src/Urban_Amenities2/: __init__.py  errors.py  logging_utils.py
src/Urban_Amenities2.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: README.md  conftest.py  test_accessibility.py  test_basic.py  test_cache_manager.py  test_calibration.py  test_cli.py  test_cli_type_safety.py  test_corridor_enrichment.py  test_corridor_trip_chaining.py  test_data_ingestion.py  test_explainability.py  test_hex.py  test_hub_airport_access.py  test_integration_pipeline.py  test_leisure_culture_access.py  test_logging.py  test_math.py  test_metrics.py  test_mobility_reliability.py  test_monitoring_health.py  test_params.py  test_parks_access.py  test_quality.py  test_resilience.py  test_routing.py  test_schemas.py  test_scores.py  test_scoring_type_safety.py  test_seasonal_outdoors.py  test_ui_cache.py  test_ui_components_structure.py  test_ui_data_context.py  test_ui_data_loader.py  test_ui_export.py  test_ui_export.py.rej  test_ui_filters.py  test_ui_filters.py.rej  test_ui_layouts.py  test_ui_module.py  (+5 more)
tests/cli/: conftest.py  test_aggregate_command.py  test_cli_errors.py  test_cli_help.py  test_config_commands.py  test_ingest_command.py  test_score_ea_command.py
tests/config/: conftest.py  test_loader.py  test_params_serialization.py  test_params_validation.py
tests/fixtures/: math_samples.py
tests/io/: conftest.py  protocols.py
tests/math/: README.md  strategies.py  test_ces_extended.py  test_diversity_extended.py  test_gtc.py  test_logsum_extended.py  test_numerical_stability.py  test_satiation.py
tests/ui/: conftest.py  test_callbacks_helpers.py  test_create_app.py  test_data_context.py  test_hex_selection.py  test_hexes.py  test_layers.py  test_performance.py  test_run.py
(+259 files in other folders)
